<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textView1"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_alignParentStart="true"
        android:text="@string/textView2" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-28dp"
        android:layout_marginEnd="4dp"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch1"
        android:layout_alignParentStart="true"
        android:text="@string/textView3" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="9dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:text="@string/textView4" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignEnd="@+id/switch1"
        android:ems="10"
        android:hint = "Phone Number"
        android:inputType="phone" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:text="@string/editText2"
        android:inputType="textMultiLine" />

</RelativeLayout>